Course get api implemented.
